--- a/app/templates/publish/release/dependencies.twig
+++ b/app/templates/publish/release/dependencies.twig
@@ -14,7 +14,7 @@
 		<input type="text" class="form-control" placeholder="Hazard" id="add-dependency">
 	</div>
 	<div class="form-group">
-		<button type="submit" class="btn btn-success inline" name="add-dependency-add">{% trans %}Add addon{% endtrans %}</button>
+		<button type="submit" class="btn btn-success inline" id="add-dependency-find">{% trans %}Add{% endtrans %}</button>
 	</div>
 </div>
 <div class="form-group">
