--- a/app/templates/publish/release/files.twig
+++ b/app/templates/publish/release/files.twig
@@ -4,8 +4,9 @@
 		var release = '{{version}}';</script>
 		{% if enable.upload %}
 		<div id="release-files-no-resumable">
-			<div class="alert alert-warning">{% trans %}Your browser does not support uploading files to Lorry.{% endtrans %}</div>
-			<div class="help-block">{% trans %}Uploading files should be possible with Firefox 4+ and Chrome 11+.{% endtrans %}</div>
+			<div class="alert alert-warning">
+				{% trans %}Your browser does not support uploading files to Lorry.{% endtrans %}<br>
+			</div>
 		</div>
 	{% else %}
 		<div class="alert alert-danger">{% trans %}File upload is disabled.{% endtrans %}</div>
@@ -32,10 +33,10 @@
 	</div>
 </div>
 {% if enable.upload and can_upload %}
-<div class="form-group">
-	<button type="button" id="resumable-select" class="btn btn-default" disabled>{% trans "Select file&hellip;" %}</button>
-	<button type="button" id="resumable-upload" class="btn btn-success" disabled>{% trans "Upload" %}</button>
-	<button type="button" id="resumable-pause" class="btn btn-success" disabled>{% trans "Pause" %}</button>
-	<p class="help-block">{% trans %}Files will only be made availabe after publishing this release and cannot be changed afterwards.{% endtrans %}</p>
-</div>
+	<div class="form-group">
+		<button type="button" id="resumable-select" class="btn btn-default" disabled>{% trans "Select file&hellip;" %}</button>
+		<button type="button" id="resumable-upload" class="btn btn-success" disabled>{% trans "Upload" %}</button>
+		<button type="button" id="resumable-pause" class="btn btn-success" disabled>{% trans "Pause" %}</button>
+		<p class="help-block">{% trans %}Files will only be made availabe after publishing this release and cannot be changed afterwards.{% endtrans %}</p>
+	</div>
 {% endif %}
