--- a/app/templates/publish/release/dependencies.twig
+++ b/app/templates/publish/release/dependencies.twig
@@ -18,5 +18,5 @@
 	</div>
 </div>
 <div class="form-group">
-	<p class="help-block">{% trans %}Users may download the release together with it's dependencies.{% endtrans %}</p>
+	<p class="help-block">{% trans %}Users may download the release together with its dependencies.{% endtrans %}</p>
 </div>
