--- a/app/templates/publish/release/files.twig
+++ b/app/templates/publish/release/files.twig
@@ -26,7 +26,7 @@
 		</ul>
 		<span id="message-text-files-loading-failed" class="hidden">{% trans %}Error loading file list.{% endtrans %}</span>
 		<ul class="list-group" id="resumable-files-none" style="display: none;">
-			<li class="list-group-item text-muted">{% trans %}No files uploaded.{% endtrans %}</li>
+			<li class="list-group-item text-muted" id="resumable-files-none-text">{% trans %}No files uploaded.{% endtrans %}</li>
 		</ul>
 		<ul class="list-group" id="resumable-files">
 		</ul>
