switch to dependency injection using PHP-DI and Monolog instead of Analog

--- a/app/templates/site/about.twig
+++ b/app/templates/site/about.twig
@@ -44,7 +44,7 @@
 				<dl>
 					<dt><a href="http://php.net/">PHP</a></dt>
 					<dd>by the <a href="http://php.net/credits.php">PHP Group</a>,</dd>
-					<dt><a href="http://twig.sensiolabs.org">Twig</a> & <a href="http://swiftmailer.org/">Swift Mailer</a></dt>
+					<dt><a href="http://twig.sensiolabs.org">Twig</a>, <a href="http://swiftmailer.org/">Swift Mailer</a> & <a href="http://symfony.com/components">various Symfony components</a></dt>
 					<dd>by <a href="http://fabien.potencier.org/">Fabien Potencier</a> and <a href="http://sensiolabs.com/">SensioLabs</a>,</dd>
 					<dt><a href="http://auraphp.com/">Aura</a>.<a href="https://github.com/auraphp/Aura.SqlQuery/">SqlQuery</a></dt>
 					<dd>by the <a href="http://auraphp.com/community">Aura community</a>,</dd>
@@ -52,12 +52,12 @@
 					<dd>by <a href="http://thephpleague.com/">the PHP League</a>,</dd>
 					<dt><a href="https://code.google.com/p/lightopenid/">LightOpenID</a></dt>
 					<dd>by <a href="https://code.google.com/u/103055401176250561450/">the anonymous author</a>,</dd>
-					<dt><a href="https://github.com/jbroadway/analog/">Analog</a></dt>
-					<dd>by <a href="https://github.com/jbroadway">Johnny Broadway</a>,</dd>
+					<dt><a href="https://github.com/Seldaek/monolog">Monolog</a></dt>
+					<dd>by <a href="http://seld.be/">Jordi Boggiano</a>,</dd>
 					<dt><a href="http://redis.io/">Redis</a></dt>
 					<dd>by <a href="http://invece.org/">Salvatore Sanfilippo</a>,</dd>
 					<dt><a href="https://github.com/resque/resque">Resque</a> via <a href="https://github.com/chrisboulton/php-resque">resque-php</a></dt>
-					<dd>by <a href="https://github.com/resque/resque/graphs/contributors">Team Resque</a> / <a href="http://chrisboulton.com/">Chris Boulton</a>,</dd>					
+					<dd>by <a href="https://github.com/resque/resque/graphs/contributors">Team Resque</a> / <a href="http://chrisboulton.com/">Chris Boulton</a>,</dd>
 					<dt><a href="http://lesscss.org/">Less</a></dt>
 					<dd>by the <a href="http://lesscss.org/about/#team">core less team</a>.</dd>
 				</dl>
