--- a/app/templates/publish/developers.twig
+++ b/app/templates/publish/developers.twig
@@ -35,7 +35,7 @@
 						</div>
 					</form>					
 				{% else %}
-					<h2>{% trans %}Ready to publish{% endtrans %}</h2>
+					<h2>{% trans %}Let's get started{% endtrans %}</h2>
 					<p class="lead">{% trans %}{{brand}} is ready to publish your addons.{% endtrans %}</p>
 					<p>
 						<a href="{{base}}/register?returnto={{origpath}}" class="btn btn-lg btn-success">{% trans %}Register now{% endtrans %}</a>
