--- a/app/templates/publish/edit/releases.twig
+++ b/app/templates/publish/edit/releases.twig
@@ -36,7 +36,7 @@
 					{% endif %}
 				</a>
 			{% else %}
-				<span class="list-group-item text-muted">{% trans %}No release created{% endtrans %}</span>
+				<span class="list-group-item text-muted">{% trans %}No release planned{% endtrans %}</span>
 			{% endfor %}
 		</div>
 	</div>
