update various strings

--- a/app/templates/publish/developers.twig
+++ b/app/templates/publish/developers.twig
@@ -58,8 +58,8 @@
 				<div class="row">
 					<div class="col-sm-6">
 						<h3>{% trans %}Getting started{% endtrans %}</h3>
-						<p>{% trans %}We know it's not always easy to build something awesome. With the introduction on ClonkSpot you should at least have a rough idea how everything works.{% endtrans %}</p>
-						<p><a href="https://clonkspot.org/development" class="btn btn-info" target="_blank">{% trans %}Introduction on ClonkSpot{% endtrans %}</a></p>
+						<p>{% trans %}We know it's not always easy to build something awesome. With the introduction on Clonkspot you should at least have a rough idea how everything works.{% endtrans %}</p>
+						<p><a href="https://clonkspot.org/development" class="btn btn-info" target="_blank">{% trans %}Introduction on Clonkspot{% endtrans %}</a></p>
 					</div>
 					<div class="col-sm-6">
 						<h3>{% trans %}Integrating {{brand}}{% endtrans %}</h3>
