--- a/app/templates/publish/edit/basic.twig
+++ b/app/templates/publish/edit/basic.twig
@@ -42,11 +42,11 @@
 	<div class="row vertical-align">
 		<div class="col-lg-4">
 			<div class="form-group">
-				<label for="title_en">{% trans %}Title (English){% endtrans %}</label>
+				<label for="title_en">{% trans %}English title{% endtrans %}</label>
 				<input type="text" class="form-control" name="title_en" id="title_en" placeholder="{{title_placeholder}}" value="{{title_en}}"{% if submitted or approved %} disabled{% endif %}>
 			</div>
 			<div class="form-group">
-				<label for="title_de">{% trans %}Title (German){% endtrans %}</label>
+				<label for="title_de">{% trans %}German title{% endtrans %}</label>
 				<input type="text" class="form-control" name="title_de" id="title_de" placeholder="{{title_placeholder}}" value="{{title_de}}"{% if submitted or approved %} disabled{% endif %}>
 			</div>
 		</div>
@@ -111,7 +111,7 @@
 					<p>{% trans %}{{Contact_us}} to add an abbreviation.{% endtrans %}</p>
 				{% endif %}
 			{% else %}
-				<p>{% trans %}Please only enter an abbreviation if it is well known.{% endtrans %}</p>
+				<p>{% trans %}Please only enter an abbreviation if it is (to some extent) well known.{% endtrans %}</p>
 			{% endif %}
 		</div>
 	</div>
