update some strings concerning addon publishing

--- a/app/templates/publish/release/basic.twig
+++ b/app/templates/publish/release/basic.twig
@@ -35,7 +35,7 @@
 				<label for="version">{% trans %}Remove{% endtrans %}</label>
 				<p><a href="#remove-release" data-toggle="collapse" data-target="#remove-release">{% trans %}Would you like to remove this release?{% endtrans %}</a></p>
 				<div id="remove-release" class="collapse">
-					<div class="alert alert-warning">
+					<div class="alert alert-warning files-some">
 						{% trans %}All uploaded files will be deleted.{% endtrans %}
 					</div>
 					<button type="submit" class="btn btn-danger">{% trans "Remove release" %}</button>
