--- a/app/templates/publish/release/publish.twig
+++ b/app/templates/publish/release/publish.twig
@@ -17,11 +17,11 @@
 {% if released %}
 	<p>This addon was published on date.</p>
 {% else %}
-	<div class="panel panel-warning">
+	<div class="panel panel-danger files-none">
 		<div class="panel-heading">{% trans %}Before publishing&hellip;{% endtrans %}</div>
 		<div class="panel-body">
 			<ol class="list-unstyled">
-				<li>You should add at least one file.</li>
+				<li>You need add at least one file.</li>
 			</ol>
 		</div>
 	</div>
