update privacy wording

--- a/app/templates/site/privacy.twig
+++ b/app/templates/site/privacy.twig
@@ -18,7 +18,7 @@
 			<li>{% trans %}<strong>Settings and profile information</strong> (for example: language, when you registered, and details you submitted on the settings page){% endtrans %}</li>	
 			<li>{% trans %}<strong>Login services</strong> (only if you added a linked account){% endtrans %}</li>
 		</ul>
-		<p>{% trans %}The following data is saved as linked to your account, but cannot be correlated once you delete your account:{% endtrans %}</p>
+		<p>{% trans %}The following data is linked to you and will remain after you delete your account, but will be unlinked if you decide to delete your account:{% endtrans %}</p>
 		<ul>
 			<li>{% trans %}<strong>Addons</strong> and <strong>releases</strong> you created (and the corresponding files you uploaded){% endtrans %}</li>
 		</ul>
