--- a/app/templates/site/about.twig
+++ b/app/templates/site/about.twig
@@ -71,8 +71,8 @@
 					<dd>by <a href="http://fabien.potencier.org/">Fabien Potencier</a> and <a href="http://sensiolabs.com/">SensioLabs</a>,</dd>
 					<dt><a href="http://auraphp.com/">Aura</a>.<a href="https://github.com/auraphp/Aura.SqlQuery/">SqlQuery</a></dt>
 					<dd>by the <a href="http://auraphp.com/community">Aura community</a>,</dd>
-					<dt><a href="https://github.com/resque/resque">Resque</a> via <a href="https://github.com/chrisboulton/php-resque">vend/resque</a></dt>
-					<dd>by <a href="https://github.com/resque/resque/graphs/contributors">Team Resque</a> / <a href="http://chrisboulton.com/">Chris Boulton</a>,</dd>
+					<dt><a href="https://github.com/resque/resque">Resque</a> via <a href="https://github.com/vend/php-resque">vend/php-resque</a></dt>
+					<dd>by <a href="https://github.com/resque/resque/graphs/contributors">Team Resque</a> / <a href="https://github.com/vend/php-resque#contributors">various contributors</a>,</dd>
 					<dt><a href="https://github.com/thephpleague/flysystem">Flysystem</a> & <a href="https://github.com/thephpleague/oauth2-client">OAuth 2.0 Client</a></dt>
 					<dd>by <a href="http://thephpleague.com/">the PHP League</a>,</dd>
 					<dt><a href="https://code.google.com/p/lightopenid/">LightOpenID</a></dt>
