improve welcome and activation emails

--- a/app/templates/email/activate.twig
+++ b/app/templates/email/activate.twig
@@ -2,13 +2,13 @@
 
 {% block subject %}{% trans %}{{brand}}: Confirm your (new) email address{% endtrans %}{% endblock %}
 
-{% set this_link %}<a href="{{url|raw}}">{% trans %}this link{% endtrans %}</a>{% endset %}
+{% set this_link %}<a href="{{activation_url|raw}}">{% trans %}this link{% endtrans %}</a>{% endset %}
 
 {% block body %}
 	<p>{% trans %}You set your email address to {{email}}.{% endtrans %}</p>
 
 	<p>{% trans %}To use all features of {{brand}} you need to activate this new address.{% endtrans %}<br>
-	{% trans %}Please open {{this_link}} to activate your address or paste the following url into your browser:{% endtrans %}</p>
+	{% trans %}Please open {{this_link}} to activate your address; or paste the following url into your browser:{% endtrans %}</p>
 
-	<p><strong>{{url|raw}}</strong></p>
+	<p><strong>{{activation_url|raw}}</strong></p>
 {% endblock %}
