--- a/app/templates/email/login.twig
+++ b/app/templates/email/login.twig
@@ -8,7 +8,7 @@
 {% block body %}
 	<p>{% trans %}You (or somebody else) requested a one-time login for your account.{% endtrans %}</p>
 
-	<p>{% trans %}Either follow {{this_link}} or use the following single-use code instead of your password on the {{login_page}}:{% endtrans %}</p>
+	<p>{% trans %}Either open {{this_link}} or use the following single-use code instead of your password on the {{login_page}}:{% endtrans %}</p>
 
 	<p><strong>{{code}}</strong></p>
 {% endblock %}
