--- a/app/templates/email/login.twig
+++ b/app/templates/email/login.twig
@@ -2,13 +2,11 @@
 
 {% block subject %}{% trans %}{{brand}}: One-time login{% endtrans %}{% endblock %}
 
-{% set this_link %}<a href="{{base}}/token?code={{code}}">{% trans %}this link{% endtrans %}</a>{% endset %}
-{% set login_page %}<a href="{{base}}/login">{% trans %}login page{% endtrans %}</a>{% endset %}
+{% set this_link %}<a href="{{login_url}}">{% trans %}this link{% endtrans %}</a>{% endset %}
 
 {% block body %}
-	<p>{% trans %}You (or somebody else) requested a one-time login for your account.{% endtrans %}</p>
+    <p>{% trans %}You (or somebody else) requested a one-time login for your account.{% endtrans %}<br>
+	{% trans %}Please open {{this_link}} access your account; or paste the following url into your browser:{% endtrans %}</p>
 
-	<p>{% trans %}Either open {{this_link}} or use the following single-use code instead of your password on the {{login_page}}:{% endtrans %}</p>
-
-	<p><strong>{{code}}</strong></p>
+	<p><strong>{{login_url}}</strong></p>
 {% endblock %}
