--- a/app/templates/publish/edit/presentation.twig
+++ b/app/templates/publish/edit/presentation.twig
@@ -1,4 +1,4 @@
-<form role=form" method="post" action="{{filename}}#presentation">
+<form role="form" method="post" action="{{filename}}#presentation">
 	<input type="hidden" name="presentation-form">
 	<input type="hidden" name="state" value="{{state}}">
 	{% include 'functions/alert.twig' with {'selector' : 'presentation'} %}
