--- a/app/templates/publish/portal.twig
+++ b/app/templates/publish/portal.twig
@@ -35,7 +35,7 @@
 				{% endfor %}
 			</ul>
             {% set developer_portal %}<a href="{{base}}/developers?create">{% trans %}developer portal{% endtrans %}</a>{% endset %}
-            <p class="help-block">{% trans %}You can create addons at the {{developer_portal}}.{% endtrans %}</p>
+            <p class="help-block">{% trans %}You can create new addons at the {{developer_portal}}.{% endtrans %}</p>
 		</div>
 	{% else %}
 		<div class="jumbotron">
